fix: build variant isn't applied
Signed-off-by: MutwakilX <144057106+Wadamzmail@users.noreply.github.com>