@@ -50,6 +50,7 @@ import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -366,7 +367,7 @@ public class FileUtil {
 
     if (path != null) {
       try {
-        return URLDecoder.decode(path, "UTF-8");
+        return URLDecoder.decode(path, StandardCharsets.UTF_8);
       } catch (Exception e) {
         return null;
       }
